# Xypher

./: .gitignore  Cargo.toml  README.md  build.rs
.github/chatmode/: MoonCrab.chatmode.md
benches/: cuda_acceleration.rs  e8_quantization.rs
src/: lib.rs  main.rs  xuid.rs  xuid_int.rs  xypher_codex.rs
