[package]
name = "xypher"
version = "0.1.0"
edition = "2021"
authors = ["Lord Xyn <lord.xyn@proton.me>"]
license = "MIT OR Apache-2.0"
description = "Production-grade multi-stream E8 lattice tokenless NLP engine with CUDA Tensor Core acceleration"
repository = "https://github.com/arcmoon-studios/xypher"
keywords = ["nlp", "cuda", "tensor-cores", "e8-lattice", "tokenless"]
categories = ["science", "algorithms", "concurrency", "multimedia"]
readme = "README.md"

[lib]
name = "xypher"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "xypher-cli"
path = "src/main.rs"

[features]
default = ["cuda", "avx2", "benchmarks"]
system-monitoring = []
cuda = ["cudarc", "cudarc/cuda-12080"]
avx2 = []
benchmarks = ["criterion"]
wasm = ["wasm-bindgen"]
rdf = []
uuid = []

[dependencies]
blake3 = "1"
uuid = "1.8.0"
# Core async runtime
tokio = { version = "1.40", features = ["full", "tracing"] }
tokio-util = "0.7"
futures = "0.3.31"
wide = "0.7.33"
# RDF & data
oxigraph = "0.3"
once_cell = "1.19"

# Concurrency & parallelism
crossbeam-epoch = "0.9"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
nvml-wrapper = "0.5"
dashmap = "6.1"
rayon = "1.10"
num_cpus = "1.16"
hashbrown = { version = "0.15.4", features = ["serde"] }
ahash = "0.8.12"
flume = "0.11.1"
arc-swap = "1.7.1"
faer = "0.22.6"

# SIMD & math
rand = "0.9"
rand_distr = "0.5"
fastrand = "2.1"
ndarray = { version = "0.16", features = ["rayon", "serde"] }

# CUDA integration
cudarc = { version = "0.16.6", optional = true, features = ["driver", "nvrtc", "cublas", "curand", "cuda-12080"] }

# Serialization & data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI & logging
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Performance monitoring
prometheus = "0.13"
sysinfo = "0.32"

# NLP integration & benchmarking
tokenizers = "0.20"
    candle-core = "0.9"
    candle-nn = "0.9"
hf-hub = "0.3"
criterion = { version = "0.5", optional = true, features = ["html_reports"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"



# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Build dependencies
[build-dependencies]
cc = { version = "1.1", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.70"
cmake = "0.1"
which = "4.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.13"
proptest = "1.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Benchmarks
[[bench]]
name = "e8_quantization"
harness = false


[[bench]]
name = "cuda_acceleration"
harness = false



# Examples
[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "gpu_acceleration"
path = "examples/gpu_acceleration.rs"

[[example]]
name = "nlp_pipeline"
path = "examples/nlp_pipeline.rs"

[[example]]
name = "performance_monitoring"
path = "examples/performance_monitoring.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
overflow-checks = false

[profile.dev]
opt-level = 1
overflow-checks = true
debug = true

[target.x86_64-unknown-linux-gnu]

[target.x86_64-pc-windows-msvc]

[target.x86_64-apple-darwin]

# Workspace configuration
[workspace]
members = [
    "."
]

# Package metadata
[package.metadata.docs.rs]
features = ["cuda", "avx2", "benchmarks"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-simd"]

arc-swap = "1.6"
